--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,31 @@
+body, html{
+    min-width: 100%;
+    margin: 0;
+}
+
+header {
+    text-align: center;
+    box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+}
+
+#title {
+    font-size: 2em;
+    box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+}
+
+
+#login {
+    padding-left: 0;
+    font-size: 1.2em;
+    display: inline-flex;
+    list-style: none;
+    width: 66%;
+    justify-content: space-between;
+}
+
 h1,
 h3 {
     text-align: center;
-}
-
-h1 {
-    border: 1px solid black;
 }
 
 h3 {
@@ -34,7 +55,6 @@ h3 {
     margin-top: 10px;
 }
 
-
 .news {
     width: 70%;
     margin: auto;
@@ -52,10 +72,18 @@ a {
     color: blue;
 }
 
+#form_and_comments{
+    text-align: center;
+}
+
+#form_edit_commment{
+    text-align: center;
+}
+
 footer {
-    margin-top: 50px;
-    background: white;
-    color: black;
+    margin-top: 30px;
+    background: #000000cc;
+    color: white;
     padding: 2rem;
     font-weight: bold;
     text-align: end;
