--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,7 @@ h3 {
     margin: auto;
     margin-top: 30px;
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+    padding-bottom: 10px;
 
 }
 
@@ -146,16 +147,19 @@ a {
     right: -50%;
     position: relative;
     transform: translateX(-50%);
+    margin-top: 20px;
 }
 
 #comment_post{
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
-    width: 90%;
+    width: 80%;
     position: relative;
     right: -50%;
     transform: translateX(-50%);
-    padding: 5px;
-    margin: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+
 }
 
 #linkpost{
@@ -182,6 +186,10 @@ a {
 
 #comment_admin{
     padding: 5%;
+    padding: 5%;
+    width: 80%;
+    box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+    margin: auto;
 }
 
 footer {
