--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ header > #login {
     display: inline-flex;
     list-style: none;
     width: 100%;
-    height: 50px;
+    height: 70px;
     left: 0;
     justify-content: space-around;
     margin-top: 0;
@@ -201,4 +201,22 @@ footer {
     text-align: end;
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
 }
+
+/******Responsive********/
+
+@media all and (max-width: 768px) {
+    body{
+      font-size: 1.2em;
+    }
+
+    header > #title{
+        width: 100%;
+    }
+
+    header > #login{
+        height: auto;
+        flex-direction: column;
+    }
+
+  }
 
