Correction bug editpost & mise en place du responsive avec metadonnées html

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,12 +210,22 @@ footer {
     }
 
     header > #title{
+        font-size: 2.2em;
         width: 100%;
     }
 
     header > #login{
         height: auto;
         flex-direction: column;
+    }
+
+    header > #login > li {
+        padding: 5px;
+    }
+
+    #linkpost{
+        margin: 0;
+        padding: 5px;
     }
 
   }
