--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ header > #login a {
 }
 
 header > #login a:hover {
-    color:grey;
+    color:#20bcd5;
 }
 
 
@@ -99,6 +99,16 @@ h3 {
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
     padding-bottom: 10px;
 
+}
+
+.news_admin {
+    padding-bottom: 1px;
+    padding-top: 1px;
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
+    box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
+    line-height: 2em;
 }
 
 .news p{
@@ -162,31 +172,33 @@ a {
 
 }
 
-#linkpost{
+.post_list{
+    margin-bottom: 20px;
+}
+
+.linkbutton{
+    font-size: 1.2em;
+    font-family: 'Nerko One', 'Cursive';
+    color: #20bcd5;
     margin: 10px;
     background: #000000cc;
-    right: -50%;
     position: relative;
-    transform: translateX(-50%);
     padding: 10px;
     border-radius: 20px;
-    border-style: dashed;
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
 }
 
-#linkpost a{
-    font-size: 1.5em;
-    font-family: 'Nerko One', 'Cursive';
-    color: #20bcd5;
+.linkpost{
+    text-align: center;
 }
 
-#linkpost:hover{
+.linkbutton:hover{
     background: #535353cc;
 }
 
 #comment_admin{
-    padding: 5%;
-    padding: 5%;
+    padding: 10px;
+    line-height: 2em;
     width: 80%;
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
     margin: auto;
@@ -223,10 +235,6 @@ footer {
         padding: 5px;
     }
 
-    #linkpost{
-        margin: 0;
-        padding: 5px;
-    }
 
   }
 
