Suppression des <label> en trop & Re-passage au W3C Validator OK et CSS OK

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,7 +160,7 @@ a {
     margin-top: 20px;
 }
 
-#comment_post{
+.comment_post{
     box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
     width: 80%;
     position: relative;
